--- a/Styles/gamer.css
+++ b/Styles/gamer.css
@@ -3,53 +3,92 @@
 
 /* shared styles */
 * {
-    margin: 0px;
-    padding: 0px;
+     padding: 0px;
     font-family: 'Work Sans', sans-serif;
     box-sizing: border-box;
-    }
+}
 
 
 header {
     background-color: #fff;
     box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.05);
-  
+
 }
 
 .nav-container {
-    min-height: 100px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    max-width: 1200px;
+    max-width: 1150px;
     margin: 0 auto;
-          
-    }
+    
+
+}
 
 .logo-container {
+    width: 50%;
     display: flex;
     align-items: center;
     gap: 15px;
+    color: #FF42A5;
 }
 
-.nav-title{
-    font-size: 2.8em;
+.nav-title {
+    font-size: 2.7em;
 }
 
 .nav-title span {
-    color:black;
+    color: black;
 }
 
 .nav-items-container{
     width: 50%;
     display: flex;
-    align-items:center;
-    justify-content: space-evenly;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0 auto;
 }
 
-.nav-items-container a{
+.nav-items-container a {
     text-decoration: none;
-    font-size: 1.1rem ;
+    font-size: 1.1rem;
     font-weight: 500;
     color: #3C354f;
 }
+
+#nav-menu-icon {
+    background: rgba(11, 2, 35, 0.10);
+    padding: 20px 25px;
+    border-radius: 5px;
+}
+
+#youtube-icon {
+    color: red;
+    margin-left: 10px;
+}
+
+#tiktok-icon {
+    margin-left: 10px;
+}
+
+
+
+/* Mobile responsive layout */
+@media screen and (max-width: 425px) {
+    header, .nav-container,
+    .nav-items-container{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: 0 auto;
+        gap: 30px;
+    }
+
+    #nav-menu-icon {
+        padding: 10px;
+    }
+    
+}
+
+
+
