--- a/Styles/gamer.css
+++ b/Styles/gamer.css
@@ -3,13 +3,15 @@
 
 /* shared styles */
 * {
-     padding: 0px;
+    margin: 0;
+    padding: 0px;
     font-family: 'Work Sans', sans-serif;
     box-sizing: border-box;
 }
 
 
 header {
+    height: 100px;
     background-color: #fff;
     box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.05);
 
@@ -19,9 +21,9 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    max-width: 1150px;
-    margin: 0 auto;
-    
+    max-width: 1100px;
+    margin: 0px auto;
+    padding-top: 20px;
 
 }
 
@@ -41,24 +43,26 @@ header {
     color: black;
 }
 
-.nav-items-container{
+.nav-items-container {
     width: 50%;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 0 auto;
+
 }
 
 .nav-items-container a {
     text-decoration: none;
-    font-size: 1.1rem;
+    font-size: 1rem;
+    margin-right: 30px;
+    margin-left: 30px;
     font-weight: 500;
     color: #3C354f;
 }
 
 #nav-menu-icon {
     background: rgba(11, 2, 35, 0.10);
-    padding: 20px 25px;
+    padding: 20px 10px;
     border-radius: 5px;
 }
 
@@ -72,11 +76,122 @@ header {
 }
 
 
+/* banner section start from here */
+.banner-container {
+   
+}
+
+.banner-container {
+    max-width: 1100px;
+    max-height: 700px;
+    margin: 0 auto;
+    /* border: 1px solid blue; */
+    display: flex;
+}
+
+.banner-content {
+    /* border: 2px solid red; */
+    width: 50%;
+    background-image: url(../images/Group\ 14.png);
+    background-repeat: no-repeat;
+    /* background-position: cover; */
+    background-size: 100%;
+    text-align: left;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    padding-left: 110px;
+}
+
+.banner-headline {
+    font-size: 2rem;
+    font-weight: 600;
+    color: #0B0223;
+
+}
+
+.banner-title {
+    font-size: 4.2rem;
+    font-weight: 700;
+    color: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+    background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+
+}
+
+.banner-para {
+    margin: 10px 0px 20px;
+    gap: 10px;
+    display: flex;
+    flex-direction: column;
+}
+
+.btn-section {
+    display: inline-flex;
+    gap: 20px;
+
+
+}
+
+
+.btn-primary {
+    padding: 10px 25px;
+    border-radius: 48px;
+    border: none;
+    color: #fff;
+    font-size: 1rem;
+    font-weight: 400;
+    background: linear-gradient(90deg, #FF42A5 0%, #FF42A5 100%);
+
+}
+
+.btn-secndory {
+    padding: 10px 25px;
+    border-radius: 48px;
+    border: none;
+    color: #fff;
+    font-size: 1rem;
+    font-weight: 400;
+    background: #4EC5F7;
+}
+
+
+.img-container {
+    /* border: 2px solid red; */
+    width: 50%;
+}
+
+.banner-img {
+    padding: 0px 50px;
+    width: 100%;
+    height: 100%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /* Mobile responsive layout */
 @media screen and (max-width: 425px) {
-    header, .nav-container,
-    .nav-items-container{
+
+    header,
+    .nav-container,
+    .nav-items-container {
         flex-direction: column;
         justify-content: center;
         align-items: center;
@@ -87,8 +202,5 @@ header {
     #nav-menu-icon {
         padding: 10px;
     }
-    
+
 }
-
-
-
