--- a/Styles/gamer.css
+++ b/Styles/gamer.css
@@ -179,7 +179,7 @@ header {
 
 .gamer-img {
     max-width: 60%;
- 
+
 }
 
 .gamer-img img {
@@ -197,9 +197,7 @@ header {
     gap: 15px;
 }
 
-.gamer-content{
-
-}
+.gamer-content {}
 
 .gamer-title {
     font-size: 2.5rem;
@@ -212,24 +210,48 @@ header {
 }
 
 .gamer-content .btn-primary {
-display: inline-flex;
-text-align: center;
-justify-content: center;
-padding: 15px;
-margin-left: 180px;
+    display: inline-flex;
+    text-align: center;
+    justify-content: center;
+    padding: 15px;
+    margin-left: 180px;
 }
 
 
+.online-games-container {
+    padding: 50px 0px 30px 0px;
+    max-width: 1100px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* border: 2px solid red; */
+}
 
 
+.games-card-container {
+    display: flex;
+    gap: 20px;
+    justify-content: space-between;
+     
+}
 
+.games-card-container img {
+   width: 260px;
+}
+   
 
+.games-title {
+    font-size: 2.5rem;
+    font-weight: 700;
+    color: #0B0223;
+    padding-bottom: 10px;
+}
 
-
-
-
-
-
+.online-games-contant p {
+    margin-bottom: 30px;
+    padding-left: 50px;
+}
 
 
 
