--- a/Styles/gamer.css
+++ b/Styles/gamer.css
@@ -233,13 +233,13 @@ header {
     display: flex;
     gap: 20px;
     justify-content: space-between;
-     
+
 }
 
 .games-card-container img {
-   width: 260px;
+    width: 260px;
 }
-   
+
 
 .games-title {
     font-size: 2.5rem;
@@ -253,8 +253,8 @@ header {
     padding-left: 50px;
 }
 
-.play-instant-section{
-    margin: 70px auto;
+.play-instant-section {
+    margin: 30px auto;
     max-width: 1100px;
     /* border: 2px solid red; */
     display: flex;
@@ -272,7 +272,7 @@ header {
 .play-instant-img {
     width: 60%;
     /* border: 2px solid red; */
-    
+
 }
 
 
@@ -283,12 +283,205 @@ header {
 }
 
 
-.play-instant-img .img-secondary{
+.play-instant-img .img-secondary {
     width: 30%;
     position: relative;
     margin: 100px;
     margin-top: -150px;
 }
+
+.popular-games {
+    align-items: center;
+}
+
+
+
+.popular-games-container {
+    background: linear-gradient(90deg, rgba(255, 66, 165, 0.03) 0%, rgba(255, 66, 165, 0.03) 100%);
+    /* padding: 60px 0px; */
+    /* display: flex; */
+
+}
+
+.popular-games {
+    max-width: 1100px;
+    margin: 0px auto;
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    /* border: 2px solid black; */
+    align-items: center;
+    padding: 100px 0px;
+
+}
+
+
+.popular-games .game-1 {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    border-radius: 50px;
+    background: #FFF;
+}
+
+.popular-games .game-2 {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    border-radius: 50px;
+    background: #FFF;
+}
+
+.popular-games .game-3 {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    border-radius: 50px;
+    background: #FFF;
+}
+
+.popular-games .game-4 {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    border-radius: 50px;
+    background: #FFF;
+}
+
+.popular-games .game-5 {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    border-radius: 50px;
+    background: #FFF;
+}
+
+.popular-games .game-6 {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    border-radius: 50px;
+    background: #FFF;
+}
+
+.popular-games .game-7 {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    border-radius: 50px;
+    background: #FFF;
+}
+
+.popular-games .game-8 {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    border-radius: 50px;
+    background: #FFF;
+}
+
+.popular-games .game-9 {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    border-radius: 50px;
+    background: #FFF;
+}
+
+
+
+
+
+
+
+footer {
+    background: #0B0223
+}
+
+
+.footer-section {
+    max-width: 1100px;
+    /* border: 3px solid red; */
+    margin: 0px auto;
+}
+
+
+.footer-container {
+    padding-top: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0px;
+    color: #FF42A5;
+}
+
+.footer-title {
+    font-size: 2.3rem;
+    padding: 10px;
+
+}
+
+.footer-img {
+    width: 7%;
+}
+
+.footer-title span {
+    color: #FFF;
+}
+
+.footer-menu {
+    display: flex;
+    /* border: 2px solid red; */
+}
+
+.footer-menu ul {
+    padding: 40px;
+    display: flex;
+    margin: 0px auto;
+    list-style: none;
+    justify-content: space-between;
+    color: #FFF;
+    font-weight: 500;
+    gap: 40px;
+}
+
+footer .icon-section {
+    /* border: 1px solid red; */
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+        
+}
+
+
+.policy-section {
+    /* max-width: 700px; */
+    padding-bottom: 100px;
+    border: 2px solid ridge;
+    color: #FFFFFF;
+    font: 1rem;
+    font-weight: 300;
+    margin: 0 auto;
+}
+
+.policy-section ul {
+    padding: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0px auto;
+    list-style: none;
+    gap: 20px;
+}
+
+.policy-section small {
+    display: flex;
+    justify-content: center;
+}
+
+
+
 
 
 /* Mobile responsive layout */
