--- a/Styles/gamer.css
+++ b/Styles/gamer.css
@@ -9,6 +9,7 @@
     box-sizing: border-box;
 }
 
+/* header section start */
 
 header {
     height: 100px;
@@ -76,18 +77,17 @@ header {
 }
 
 
+
 /* banner section start from here */
 
 .banner-container {
     max-width: 1100px;
     max-height: 700px;
     margin: 0 auto;
-    /* border: 1px solid blue; */
     display: flex;
 }
 
 .banner-content {
-    /* border: 2px solid red; */
     width: 50%;
     background-image: url(../images/Group\ 14.png);
     background-repeat: no-repeat;
@@ -124,11 +124,14 @@ header {
     flex-direction: column;
 }
 
+#span-icon {
+    color: #FF42A5;
+    padding-right: 5px;
+}
+
 .btn-section {
     display: inline-flex;
     gap: 20px;
-
-
 }
 
 
@@ -165,6 +168,7 @@ header {
     height: 100%;
 }
 
+
 /* gamer section start here */
 .gamer-section {
     background: linear-gradient(90deg, rgba(255, 66, 165, 0.03) 0%, rgba(255, 66, 165, 0.03) 100%);
@@ -197,8 +201,6 @@ header {
     gap: 15px;
 }
 
-
-
 .gamer-title {
     font-size: 2.5rem;
     font-weight: 700;
@@ -217,6 +219,7 @@ header {
     margin-left: 180px;
 }
 
+/* Online games funny videos section start */
 
 .online-games-container {
     padding: 50px 0px 30px 0px;
@@ -253,10 +256,11 @@ header {
     padding-left: 50px;
 }
 
+/* Play instant section start here */
+
 .play-instant-section {
     margin: 30px auto;
     max-width: 1100px;
-    /* border: 2px solid red; */
     display: flex;
 
 }
@@ -264,15 +268,13 @@ header {
 .play-instant-content {
     margin-top: 50px;
     width: 50%;
-    /* border: 2px solid red; */
     text-align: right;
     padding: 60px;
 }
 
 .play-instant-img {
     width: 60%;
-    /* border: 2px solid red; */
-
+    
 }
 
 
@@ -290,17 +292,15 @@ header {
     margin-top: -150px;
 }
 
+/* more popular games with hover start form here */
+
 .popular-games {
     align-items: center;
 }
 
-
-
 .popular-games-container {
     background: linear-gradient(90deg, rgba(255, 66, 165, 0.03) 0%, rgba(255, 66, 165, 0.03) 100%);
-    /* padding: 60px 0px; */
-    /* display: flex; */
-
+    
 }
 
 .popular-games {
@@ -387,6 +387,7 @@ header {
     
 }
 
+/* footer section start from here */
 
 footer {
     background: #0B0223
@@ -476,34 +477,43 @@ footer .icon-section {
 
 
 
-
-
 /* Mobile responsive layout */
+
 @media screen and (max-width: 425px) {
-
-    header,
-    .nav-container,
-    .nav-items-container,
-    .banner-container {
+    .nav-container {
         flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        margin: 0 auto;
-        gap: 30px;
     }
+.nav-items-container{
+    flex-direction: column;
+} 
+    .banner-container, .banner-content, .banner-para {
+        flex-direction: column;
+    }
+.gamer-content {
+    flex-direction: column;
+}
 
-    .banner-container {
-        flex-direction: column-reverse;
-        overflow-wrap: calc(1);
-    }
 
-    .banner-container .banner-img {
-        position: absolute;
-        grid-template-columns: 1fr;
-    }
+.footer-menu {
+    flex-direction: column;
+}
 
-    #nav-menu-icon {
-        padding: 10px;
-    }
+
+
+}
+
+
+
+/* Tab responsive layout */
+@media screen and (min-width: 425px) and (max-width: 800px) {
+    
+.nav-container {
+    flex-direction: column;
+  }
+
+.online-games-container, .games-card-container, .online-games-container, .play-instant-section, .footer-container, .footer-menu, .footer-section {
+    flex-direction: column;
+}
+
 
 }
